[tool.poetry]
name = "langgraph-project"
version = "0.1.0"
packages = [
    { include = "langgraph_project", from = "src" }
]
description = "Proyecto LangGraph + Studio configurado para usar Google Gemini como único LLM, con soporte para paquetes comunitarios"
authors = ["Javier Hernández <javier@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Núcleo LangGraph compatible con Studio
langgraph = "*"
langgraph-checkpoint-sqlite = "*"
langgraph-sdk = ">=0.0.10"


# Integración con LangChain + Gemini
langchain = ">=0.1.0"
langchain-core = "*"
langchain-community = "*"
langchain-google-genai = "*"
google-cloud-aiplatform = "*"

# Entorno y notebooks
python-dotenv = ">=1.0.0"
ipykernel = "*"
jupyter = "*"
notebook = "*"

# Formateo
black = { version = "*", extras = ["jupyter"] }

# Utilidades notebook
jupytext = "*"
nbformat = "*"
nbconvert = "*"

# Servidores / API local
uvicorn = "*"
fastapi = "*"

# Tipado y validación
pydantic = "<2.0.0"
streamlit = "^1.51.0"
newsapi-python = "^0.2.7"
eventregistry = "^9.1"

[tool.poetry.group.dev.dependencies]
# CLI en modo in-memory para desarrollo
langgraph-cli = { version = ">=0.0.10", extras = ["inmem"] }
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
